src/main/java/com/example/final_project/_core/errors/exception/Exception401.java
package com.example.final_project._core.errors.exception;

public class Exception401 extends RuntimeException {
    public Exception401(String msg) {
        super(msg);
    }
}